--- a/static/css/common.css
+++ b/static/css/common.css
@@ -15,6 +15,25 @@
 #headerWrap > h1 {height:55px; padding:18px 0 0 29px; border-left:1px solid #e8e9ee;}
 #headerWrap > h1 a {display:inline-block; font-size:0;}
 
+.utilGroup {position:absolute; top:0; right:0; height:55px; padding:9px 16px 0 29px; border-left:1px solid #e8e9ee;}
+.privacy {float:left; width:36px; height:36px;}
+.privacy > .thumb {position:relative; width:36px; height:36px; display:-webkit-box; display:-ms-flexbox; display:flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; vertical-align:middle;}
+.privacy > .thumb:before {content:''; -webkit-box-flex:1; -ms-flex:1; flex:1;}
+.privacy > .thumb:after {content:''; -webkit-box-flex:1; -ms-flex:1; flex:1;}
+.privacy > .thumb a {display:inline-block; font-size:0;}
+.privacy > .thumb a img {max-width:36px; max-height:36px; border-radius:50%;}
+.util {position:relative; float:left; margin-left:13px;}
+.utilBox {position:absolute; top:46px; right:0; display:none; width:215px; padding:31px 20px 31px 20px; border:1px solid #b4bcc9; border-radius:5px; background:#fff; -webkit-box-shadow:0px 3px 0px 0px rgba(0, 0, 0, 0.07); box-shadow:0px 3px 0px 0px rgba(0, 0, 0, 0.07);}
+.utilBox > .btn.close {position:absolute; top:14px; right:14px;}
+.utilList > li {padding:5px 0;}
+.utilList > li + li {border-top:1px solid #dcdcdc;}
+.utilList > li > a {position:relative; display:block; padding-left:36px; font-weight:600; font-size:13px; color:#181818; line-height:20px; text-decoration:none;}
+.utilList > li > a:after {content:''; position:absolute; top:0; left:0; width:20px; height:20px; background:url(../images/common/sprite_common.png) no-repeat 0 0;}
+.utilList > li > a.ty1:after {background-position:-192px 0;}
+.utilList > li > a.ty2:after {background-position:-192px -20px;}
+.utilList > li > a.ty3:after {background-position:-192px -40px;}
+.utilList > li > a.ty4:after {background-position:-192px -60px;}
+
 
 /* ==============================
  * footer
@@ -295,6 +314,9 @@ a.btn {text-decoration:none;}
 .btn.removeBtn {width:31px; height:30px; padding:0; text-indent:-999px; background:#fff; border:1px solid #dcdcdc; overflow:hidden;}
 .btn.removeBtn:before {content:''; position:absolute; top:5px; left:4px; width:23px; height:19px; background:url(../images/common/sprite_common.png) no-repeat -156px -30px;}
 .btn.close {display:inline-block; width:12px; height:12px; padding:0; font-size:0; overflow:hidden; text-indent:-999px; background:url(../images/common/sprite_common.png) no-repeat 0 -100px; border:none; line-height:normal; border-radius:0;}
+.btn.utilMenu {position:relative; width:36px; height:36px; background:#fff; text-indent:-999px; border-radius:0; overflow:hidden; outline:none;}
+.btn.utilMenu:after {content:''; position:absolute; top:7px; left:16px; width:4px; height:22px; background:url(../images/common/sprite_common.png) no-repeat -192px -80px;}
+
 
 /* menuAll */
 .menuAll {position:fixed; top:0; left:0; z-index:101; width:88px; height:55px;}
@@ -305,9 +327,9 @@ a.btn {text-decoration:none;}
 
 
 /* tablist */
-.tabWrap {position:relative; z-index:1; padding:28px 115px 0 0; height:84px; background:#f5f6fa; font-size:0;}
+.tabWrap {position:relative; z-index:1; padding:28px 10% 0 0; height:84px; background:#f5f6fa; font-size:0;}
 .tabList {display:-webkit-box;display:-ms-flexbox;display:flex; width:100%; padding:0 0 0 70px; font-size:0;}
-.tabList > li {position:relative; background:#e9f0fb; -ms-flex-negative:1; flex-shrink:1; -ms-flex-preferred-size:230px; flex-basis:230px; /* flex:1; */}
+.tabList > li {position:relative; background:#e9f0fb; -ms-flex-negative:1; flex-shrink:1; -ms-flex-preferred-size:235px; flex-basis:235px; /* flex:1; */}
 .tabList > li + li {}
 .tabList > li > a:after {content:''; position:absolute; top:12px; left:-1px; width:1px; border-bottom:35px solid #c3ccda;}
 .tabList > li:last-child {border-radius:0 10px 0 0;}
@@ -331,12 +353,9 @@ a.btn {text-decoration:none;}
 
 .tabListBox {display:none;}
 .tabListBox.on {display:block;}
-.tabListBox {position:absolute; top:28px; right:0; z-index:55; width:115px; padding:0 0 0 0; /* border-radius:5px 5px 0 0; */ /* box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.15); */}
-/*
-.tabListBox:before {content:''; position:absolute; top:0; left:-15px; z-index:-1; width:100%; height:100%; background:#e9f0fb; border-radius:5px 5px 0 0; box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.15);}
-.tabListBox:after {content:''; position:absolute; top:0; left:-30px; z-index:-2; width:100%; height:100%; background:#e9f0fb; border-radius:5px 5px 0 0; box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.15);}
-*/
-.tabListBox > span {display:block; font-weight:600; font-size:14px; color:#0754d2; line-height:55px; text-align:center; background:#fff; border-radius:5px 5px 0 0; -webkit-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.15); box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.15); cursor:pointer;}
+.tabListBox {position:absolute; top:28px; right:0; z-index:55; width:10%; padding:0 0 0 0;}
+.tabListBox > span {position:relative; display:block; font-weight:600; font-size:14px; color:#0754d2; line-height:56px; text-align:center; background:#e9f0fb; border-radius:10px 10px 0 0; cursor:pointer; }
+.tabListBox > span:after {content:''; position:absolute; top:12px; left:0; width:1px; border-bottom:35px solid #c3ccda;}
 .tabListBox ul {display:none;}
 .tabListBox ul {position:absolute; top:55px; right:0; width:212px; max-height:532px; overflow:auto; background:#fff; border:1px solid #b4bcc9; border-radius:5px;}
 .tabListBox li {position:relative; padding:0 38px 0 15px;}
@@ -345,7 +364,6 @@ a.btn {text-decoration:none;}
 .tabListBox li:hover:after {content:none;}
 .tabListBox li + li:after {content:''; position:absolute; top:0; left:7px; width:calc(100% - 14px); border-bottom:1px solid #dcdcdc;}
 .tabListBox li a {display:block; padding:7px 0 6px 0; font-size:14px; color:#333; text-decoration:none;}
-/* .tabListBox li a.on {background:#ddd;} */
 
 .tabListBox li a span {display:block; overflow:hidden; text-overflow:ellipsis; white-space:nowrap; font-size:13px; color:#4e4f62; line-height:20px;}
 .tabListBox li .tabClose {position:absolute; top:12px; right:14px; width:10px; height:10px;}
