--- a/static/css/contents.css
+++ b/static/css/contents.css
@@ -35,7 +35,7 @@
 
 h2.tit {position:relative; padding:7px 0; font-weight:700; font-size:24px; color:#181818; line-height:32px;}
 h2.tit.thumb {padding-left:50px;}
-h2.tit.thumb > img {position:absolute; top:0; left:0; max-width:41px; max-height:41px;}
+h2.tit.thumb > img {position:absolute; top:4px; left:0; max-width:41px; max-height:41px;}
 h2.tit + .inpItem {margin-top:20px;}
 h2.tit + h3.tit {margin-top:20px;}
 
