--- a/static/css/common.css
+++ b/static/css/common.css
@@ -450,6 +450,18 @@ nav {-webkit-box-shadow: 0px 5px 20px 0px rgba(31, 54, 95, 0.15);box-shadow: 0px
 .ibsheetDiv + h3.tit {margin-top:20px;}
 
 
+/* 삭제 예정 */
+.ibsheepTop {position:relative; margin-top:10px;}
+.ibsheepTop:after {content:''; display:block; clear:both;}
+.ibsheepTop > .filter {}
+.ibsheepTop > .btns {float:right;}
+.ibsheepTop .btn + .btn {margin-left:7px;}
+.ibsheepTop > .tools {float:right;}
+.ibsheepTop > .tools .btn + .btn {margin-left:7px;}
+.ibsheepTop + .ibsheetDiv {margin-top:10px;}
+/* 삭제 예정 */
+
+
 /* error page */
 .errorPage {width:390px; padding:30px; border-radius:5px; -webkit-box-shadow: 3px 4px 20px 0px rgba(190, 192, 196, 0.7); box-shadow: 3px 4px 20px 0px rgba(190, 192, 196, 0.7);}
 .errorPage > h1 {padding:0 0 15px 0; text-align:center; border-bottom:2px solid #085ec1;}
