--- a/static/css/common.css
+++ b/static/css/common.css
@@ -247,7 +247,7 @@ body .ui-tooltip {display:none !important;}
 .ui.dropdown.country.search {width:200px; height:30px; min-height:auto; padding:0 28px 0 10px;}
 .ui.dropdown.country.search.selection > input.search {padding:0 30px 0 10px;}
 .ui.dropdown.country.selection {color:#666;}
-.ui.dropdown.country.:not(.button)>.default.text {color:#999;}
+.ui.dropdown:not(.button)>.default.text {color:#999;}
 .ui.dropdown.country.search > .text {font-size:13px; line-height:28px;}
 .ui.dropdown.country.selection > .dropdown.icon {right:0; top:0; width:28px; height:28px; margin:0; padding:0; line-height:normal; opacity:1;}
 .ui.dropdown.country.search > .dropdown.icon:before {content:''; position:absolute; top:11px; left:7px; width:12px; height:6px; background:url(../images/common/sprite_common.png) no-repeat 0 -80px !important;}
@@ -256,7 +256,7 @@ body .ui-tooltip {display:none !important;}
 .ui.dropdown.disabled {background:#e4e4e6; opacity:1;}
 
 .ui.dropdown + .inputBox.zipCode {width:113px; max-width:200px; vertical-align:top; margin-left:7px;}
-.ui.dropdown > .text {font-size:14px;}
+.ui.dropdown > .text {font-size:13px;}
 .ui.search.dropdown.active > input.search, .ui.search.dropdown.visible>input.search {height:100%;}
 .ui.search.selection.dropdown > input.search {height:100%; font-size:14px; line-height:30px;}
 
